--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "framer-motion": "^11.15.0",
     "lamina": "^1.1.23",
     "leva": "^0.9.35",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
     "react-type-animation": "^3.2.0",
     "three": "^0.171.0"
