--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "lottie-react": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe": "^5.0.2",
+    "react-globe.gl": "^2.28.3",
     "react-icons": "^5.4.0",
     "react-responsive": "^10.0.0",
+    "react-scroll": "^1.9.0",
     "react-type-animation": "^3.2.0",
     "three": "^0.171.0"
   },
